enum-ptr-test/tests/fail/discrinimant.stderr
error: discrinimant is unsupported
 --> tests/fail/discrinimant.rs:9:18
  |
9 |     B(&'b i32) = 3,
  |                  ^
